<resources>
    <string name="app_name">MovieApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="watchlist">WatchList</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="new_movies">New Movies</string>
    <string name="trending_tv">Trending TV</string>
    <string name="popular">Popular</string>
    <string name="trending_movies">Trending Movies</string>
    <string name="empty_fav">Oops!\nYou haven\'t added anything to Favorites yet</string>
    <string name="empty_watch_list">There\'s no movie to watch here</string>
    <string name="search_for_a_movie">Search for a movie</string>
    <string name="release_date">release date:</string>
    <string name="book_now">Book Now</string>
    <string name="imdb">Imdb:</string>
    <string name="biography">Biography</string>
    <string name="movies">Movies</string>
    <string name="seats_selection">Seats Selection</string>
    <string name="mm_yy">MM/YY</string>
    <string name="bank_name">BANK NAME</string>
    <string name="card_holder">CARD HOLDER</string>
    <string name="cardholder_name">CARDHOLDER NAME</string>
    <string name="expire_date">EXPIRE DATE</string>
    <string name="enter_bank_name">Enter Bank Name...</string>
    <string name="enter_card_holder_name">Enter Card Holder Name...</string>
    <string name="enter_card_number">Enter Card Number...</string>
    <string name="bank_name_lowercase">Bank Name</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="expire_date_lowercase">Expire Date</string>
    <string name="add_credit_card">Add Credit Card</string>
    <string name="add_card">Add Card</string>
    <string name="add_a_new_card">+ Add a new card</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sing_up">Sing Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="let_s_sign_you_in">Lets sign you in</string>
    <string name="enter_email">Enter Email</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="enter_username">Enter Username</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="regional">Regional</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="personal_details">Personal Details</string>
    <string name="user_name">User Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
</resources>